# anomark-rs

./: Cargo.toml  README.md
bindings/anomark-py/: Cargo.toml  README.md  pyproject.toml
bindings/anomark-py/src/: lib.rs
src/: configuration.rs  data_handler.rs  integration_tests.rs  lib.rs  log_generator.rs  mmap.rs  model.rs  model_handler.rs  parallel.rs  parallel_processing.rs  streaming.rs  token_model.rs  tokenizer.rs  train_filter.rs  train_input.rs
tests/: regression_test.rs
