[package]
name = "anomark"
version = "1.0.0"
edition = "2021"
authors = ["Rust Port"]
description = "Anomaly detection in command lines with Markov chains"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
csv = "1.3"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
chrono = "0.4"
anyhow = "1.0"
rand = "0.8"
ordered-float = "4.2"
# Performance optimizations
rayon = "1.8"           # Parallel processing
memmap2 = "0.9"         # Memory-mapped files
ahash = { version = "0.8", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "train-from-csv"
path = "src/bin/train_from_csv.rs"

[[bin]]
name = "train-from-txt"
path = "src/bin/train_from_txt.rs"

[[bin]]
name = "apply-model"
path = "src/bin/apply_model.rs"

[lib]
name = "anomark"
path = "src/lib.rs"
