[package]
name = "anomark"
version = "1.0.0"
edition = "2021"
authors = ["Rust Port"]
description = "Anomaly detection in command lines with Markov chains"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
csv = "1.3"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
chrono = "0.4"
anyhow = "1.0"
rand = "0.8"
ordered-float = "4.2"
# Performance optimizations
rayon = "1.8"           # Parallel processing
memmap2 = "0.9"         # Memory-mapped files
ahash = { version = "0.8", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "generate-logs"
path = "src/bin/generate_logs.rs"

[[bin]]
name = "train-token-model"
path = "src/bin/train_token_model.rs"

[[bin]]
name = "apply-token-model"
path = "src/bin/apply_token_model.rs"

[[bin]]
name = "apply-model"
path = "src/bin/apply_model.rs"

[[bin]]
name = "inspect-model"
path = "src/bin/inspect_model.rs"

[lib]
name = "anomark"
path = "src/lib.rs"
